--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,3 +19,7 @@
 .box {
   @apply bg-opacity-25 bg-white bg-clip-padding backdrop-filter backdrop-blur-md p-10 flex justify-center items-center rounded-2xl shadow-xl min-w-[300px] min-h-[150px] gap-2;
 }
+
+.text-square {
+  @apply bg-neutral-600 text-neutral-100 text-3xl opacity-90;
+}
