--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,3 +23,7 @@
 .text-square {
   @apply bg-neutral-600 text-neutral-100 text-3xl opacity-90;
 }
+
+.optbutton {
+  @apply flex flex-row items-center justify-center w-full px-1 py-1 text-sm font-medium bg-blue-200 leading-6 duration-100 transform rounded-xl shadow cursor-pointer focus:ring-4 focus:ring-blue-300 focus:ring-opacity-50 focus:outline-none sm:mb-0 sm:w-auto sm:mr-4 md:pl-8 md:pr-6 xl:pl-12 xl:pr-10   hover:shadow-lg hover:-translate-y-1;
+}
