--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,25 @@
   }
 }
 
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
 .light {
   @apply bg-gradient-to-tr from-white via-sky-100 to-blue-400;
 }
@@ -17,7 +36,7 @@
 }
 
 .box {
-  @apply bg-opacity-25 bg-white dark:bg-black/25 bg-clip-padding backdrop-filter backdrop-blur-md xs:p-8 p-10 flex justify-center items-center rounded-2xl shadow-xl min-w-[300px] min-h-[150px] xs:max-w-[300px] gap-2;
+  @apply  bg-white/25 dark:bg-black/25 bg-clip-padding backdrop-filter backdrop-blur-md xs:p-8 p-10 flex justify-center items-center rounded-2xl shadow-xl min-w-[300px] min-h-[150px] xs:max-w-[300px] gap-2;
 }
 
 .text-square {
