--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,7 @@
 }
 
 .light {
-  @apply bg-gradient-to-tr from-white via-sky-100 to-blue-400;
+  @apply bg-gradient-to-tr from-white via-sky-100 to-blue-400 transition-all duration-1000 ease-in-out;
 }
 
 .notlight {
@@ -36,11 +36,11 @@
 }
 
 .box {
-  @apply  bg-white/25 dark:bg-black/25 bg-clip-padding backdrop-filter backdrop-blur-md xs:p-8 p-10 flex justify-center items-center rounded-2xl shadow-xl min-w-[300px] min-h-[150px] xs:max-w-[300px] gap-2;
+  @apply bg-white/25 dark:bg-black/25 bg-clip-padding backdrop-filter backdrop-blur-md xs:p-8 p-10 flex justify-center items-center rounded-2xl shadow-xl min-w-[300px] min-h-[150px] xs:max-w-[300px] gap-2;
 }
 
 .text-square {
-  @apply bg-neutral-600 text-neutral-100 text-3xl xs:text-2xl opacity-90 dark:text-neutral-600 dark:bg-neutral-100;
+  @apply bg-neutral-600 text-neutral-100 text-3xl xs:text-2xl opacity-90 dark:text-neutral-600 dark:bg-neutral-100 transition-all duration-1000 ease-in-out;
 }
 
 .optbutton {
